processed/gerrit/txt/53277.txt
Change:     53277
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53277
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     b2_14
Status:     NEW
Owner:      Jian Yu
Created:    2023-11-29 07:42:33.000000000
Updated:    2024-08-11 03:12:59.000000000
Patch Set:  2
Insertions: +3
Deletions:  -3
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Shaun Tancheff: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Lustre-change: https://review.whamcloud.com/49043
Lustre-commit: d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b

--- Review History ---

--- Message (Jian Yu, 2023-11-29 07:42:33.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-11-29 07:45:31.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-11-29 08:14:05.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100566/ : SUCCESS

--- Message (Jian Yu, 2023-11-29 08:18:42.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (wc-checkpatch, 2023-11-29 08:21:26.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2023-11-29 08:40:55.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100570/ : SUCCESS

--- Message (Autotest, 2023-11-29 16:46:48.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-4 session on el7.9-x86_64/ldiskfs servers and clients for build 100570 patch 2. Requested by jianyu because of LU-13644.

--- Message (Autotest, 2023-11-29 16:47:08.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-zfs session on el7.9-x86_64/zfs servers and clients for build 100570 patch 2. Requested by jianyu because of LU-13644.

--- Message (Shaun Tancheff, 2024-08-11 03:12:59.000000000) ---
Patch Set 2: Code-Review+1
